feat(parser): goas 解析层功能实现
